--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
+    "con": "^0.1.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "mysql": "^2.18.1",
+    "mysql2": "^3.1.1",
     "path": "^0.12.7"
   }
 }
